--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body {
 	</div>
   <canvas id="myCanvas" width="800" height="400" style="margin:0"></canvas>
 
+  <script src="utils.js"></script>
   <script src="summer.js"></script>
 </body>
 </html>
